--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,32 @@ services:
     volumes:
       - ./app/:/usr/src/app/
     ports:
-      - 8001:8000
+      - "8001:8000"
     env_file:
       - ./.env.dev
     depends_on:
       - db
   db:
-    image: postgres:13.0-alpine
+    image: postgres:15.0-alpine
     volumes:
       - ./data/:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=hello_django
       - POSTGRES_PASSWORD=hello_django
       - POSTGRES_DB=hello_django_dev
+  adminer:
+    image: adminer
+    links:
+      - db
+    ports:
+      - "8082:8080"
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: user@domain.com
+      PGADMIN_DEFAULT_PASSWORD: pgadmin
+    links:
+      - db
+    ports:
+      - "8084:80"
 
